--- a/tensorflow/examples/udacity/1_notmnist.ipynb
+++ b/tensorflow/examples/udacity/1_notmnist.ipynb
@@ -27,6 +27,7 @@
         "The objective of this assignment is to learn about simple data curation practices, and familiarize you with some of the data we'll be reusing later.\n",
         "\n",
         "This notebook uses the [notMNIST](http://yaroslavvb.blogspot.com/2011/09/notmnist-dataset.html) dataset to be used with python experiments. This dataset is designed to look like the classic [MNIST](http://yann.lecun.com/exdb/mnist/) dataset, while looking a little more like real data: it's a harder task, and the data is a lot less 'clean' than MNIST."
+     
       ]
     },
     {
@@ -44,7 +45,8 @@
       },
       "source": [
         "# These are all the modules we'll be using later. Make sure you can import them\n",
-        "# before proceeding further.\n",
+        "# before proceeding further. In case of error, make sure /these modules are already installed. Otherwise type on your python console:\n",
+        "# pip3 install --upgrade <module>\n",
         "from __future__ import print_function\n",
         "import imageio\n",
         "import matplotlib.pyplot as plt\n",
